language/move-lang/tests/move_check/typing/block_empty_invalid.exp
error: 

   ┌── tests/move_check/typing/block_empty_invalid.move:3:10 ───
   │
 3 │         ({}: u64);
   │          -- The type: '()'
   │              --- Is not compatible with: 'u64'
   │              ^^^ Invalid type annotation
   │

error: 

   ┌── tests/move_check/typing/block_empty_invalid.move:4:10 ───
   │
 4 │         ({}: &u64);
   │          -- The type: '()'
   │              ---- Is not compatible with: '&u64'
   │              ^^^^ Invalid type annotation
   │

error: 

   ┌── tests/move_check/typing/block_empty_invalid.move:5:10 ───
   │
 5 │         ({}: (u64, bool));
   │          -- The type: '()'
   │              ----------- Is not compatible with: '(u64, bool)'
   │              ^^^^^^^^^^^ Invalid type annotation
   │

